--- a/src/pages/site-manager-home/site-manager-home.html
+++ b/src/pages/site-manager-home/site-manager-home.html
@@ -1,18 +1,15 @@
-<!--
-  Generated template for the SiteManagerHomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'SITE_MANAGEMENT_HOME_TITLE' | translate }}</ion-title>
+    <ion-title>{{ 'SITE_MANAGER_HOME_TITLE' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h2>{{ 'MY_SITES' | translate }}</h2>
+  <ion-list>
+    <button ion-item *ngFor="let site of myActiveSites$ | async" (click)="openSite(site.id)" >{{site.location.name}}</button>
+  </ion-list>
 </ion-content>
