--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <link rel="apple-touch-icon" href="assets/imgs/logo.png">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
