--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -14,16 +14,17 @@
 
 
 <ion-content padding>
-
-  <h1 ion-text color='danger'>{{ 'NOTIFICATIONS' | translate }}</h1>
+  <!-- <span>
+    <h1 ion-text color="light" style="background-color: #4e3d4a">{{ 'NOTIFICATIONS' | translate }}</h1>
+  </span>
   <ion-card *ngFor='let notification of activeNotifications$ | async'>
     <ion-card-title>
       <b>{{notification.siteName}}</b>
     </ion-card-title>
     <ion-item>{{notification.message}}</ion-item>
-  </ion-card>
+  </ion-card> -->
   <!--  -->
-  <h1 ion-text color='secondary'>{{ 'SUPPLY_REQUESTS' | translate }}</h1>
+  <h1 ion-text color="light" style="background-color: #4e3d4a">{{ 'SUPPLY_REQUESTS' | translate }}</h1>
   <ion-card *ngFor='let supplyRequest of activeSupplyRequests$ | async' (click)='goToSupplyRequest(supplyRequest.id)'>
     <ion-card-title>
       <b>{{supplyRequest.siteName}}</b>
@@ -42,8 +43,7 @@
     </ion-item>
   </ion-card>
   <!--  -->
-  <h1 ion-text color='primary'>{{ 'ACTIVE_SITES' | translate}}</h1>
-  <!-- <ion-card *ngFor='let site of activeSites$ | async' (click)='goToSite({{site.id}})'> -->
+  <h1 ion-text color="light" style="background-color: #4e3d4a">{{ 'ACTIVE_SITES' | translate}}</h1>
   <ion-card *ngFor='let site of activeSites$ | async' (click)='goToSite(site.id, site.location.name)'>
     <ion-card-title>
       <b>{{site.location.name}}</b>
