--- a/src/pages/supplyRequest/supplyRequest.html
+++ b/src/pages/supplyRequest/supplyRequest.html
@@ -35,10 +35,10 @@
     <ion-row>
       <ion-col></ion-col>
       <ion-col>
-        <button ion-button color="danger" (click)="deleteRequest(supplyRequest)">{{ 'DELETE' | translate }}</button>
+        <button ion-button color="danger" [disabled]="isComplete()" (click)="deleteRequest(supplyRequest)">{{ 'DELETE' | translate }}</button>
       </ion-col>
       <ion-col>
-        <button ion-button color="secondary" (click)="supplyRequest(supplyRequest)">{{ 'SUPPLY_ALL' | translate }}</button>
+        <button ion-button color="secondary" [disabled]="isComplete()" (click)="supplyRequest(supplyRequest)">{{ 'SUPPLY_ALL' | translate }}</button>
       </ion-col>
       <ion-col></ion-col>
     </ion-row>
