--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,13 @@
   <!--<script src="cordova.js"></script>-->
 
   <!-- un-comment this code to enable service worker -->
-  <!--
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
-  </script>-->
+  </script>
 
   <link href="build/main.css" rel="stylesheet">
 
